# adaptive-rag-langgraph

./: .env.example  .gitignore  ARCHITECTURE.md  README.md  pyproject.toml  streamlit_app.py  test_bm25.py
app/: api_server.py  main.py
app/api/: routes.py
app/config/: settings.py
app/graph/: builder.py  message_utils.py  nodes.py  routes.py  state.py
app/llm/: groq_client.py
app/models/: grade.py  route.py
app/prompts/: generator.py  grader.py  query_rewriter.py  router.py  web_search.py
app/rag/: adaptive_rag.py  general_llm.py  generator.py  grader.py  query_rewriter.py  router.py  web_search.py
app/services/: document_upload.py
app/vectorstore/: bm25_retriever.py  embeddings.py  ingest.py  retriever.py
vector_store/: index.faiss  index.pkl
