[project]
name = "adaptive-rag-langgraph"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "faiss-cpu>=1.14.3",
    "langchain>=1.3.9",
    "langchain-community>=0.4.2",
    "langchain-groq>=1.1.3",
    "langchain-huggingface>=1.2.2",
    "langchain-text-splitters>=1.1.2",
    "pypdf>=6.13.3",
    "sentence-transformers>=5.6.0",
    "tavily-python>=0.7.26",
]
