[project]
name = "adaptive-rag-langgraph"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "faiss-cpu>=1.14.3",
    "fastapi>=0.138.0",
    "langchain>=1.3.9",
    "langchain-community>=0.4.2",
    "langchain-groq>=1.1.3",
    "langchain-huggingface>=1.2.2",
    "langchain-text-splitters>=1.1.2",
    "pypdf>=6.13.3",
    "rank-bm25>=0.2.2",
    "requests>=2.34.2",
    "sentence-transformers>=5.6.0",
    "streamlit>=1.58.0",
    "tavily-python>=0.7.26",
    "uvicorn>=0.49.0",
]
